--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,35 +5,42 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Magangremote"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:label="Profile"
+            android:parentActivityName=".ui.home.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.lupaPassword.LupaPasswordActivity"
+            android:label="Lupa Password"
+            android:parentActivityName=".ui.auth.AuthActivity"
             android:exported="false" />
         <activity
             android:name=".ui.detail.DetailActivity"
+            android:label="Detail Lowongan"
+            android:parentActivityName=".ui.home.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.notification.NotificationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.save.SaveActivity"
+            android:label="Notifikasi"
+            android:parentActivityName=".ui.home.HomeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.home.HomeActivity"
-            android:label="@string/notification"
-            android:exported="false" />
+            android:exported="false"
+          />
         <activity
             android:name=".ui.auth.AuthActivity"
             android:exported="false" />
@@ -46,6 +53,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
